--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid p-0">
     <div class=" d-flex justify-content-center align-items-center pt-3" style="height: 100px;">
-      <img class="imagenlogo" [src]="logo">
+      <a [routerLink]="['/']"><img class="imagenlogo" [src]="logo"></a>
      </div>
   
       <div class="d-flex justify-content-around align-items-center m-0 pt-3 pb-3" >
         <img class="imagentelefono" [src]="telefono">
-        <nav class="navbar  navbar-dark p-0   navbar-expand-sm d-flex justify-content-end   " style=" font-family: 'Philosopher',sans-serif;background: rgb(131, 140 , 40);  " >
+        <nav class="navbar  navbar-dark p-0   navbar-expand-sm d-flex justify-content-end   " style=" font-family: 'Philosopher',sans-serif;" >
   
     
           <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" 
@@ -17,10 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
         <div class="navbar-nav  text-monospace d-flex align-items-center" style="font-family: 'Philosopher', sans-serif;">
             <a class="nav-item nav-link active text-dark" href="#">Inicio</a>
-            <a class="nav-item nav-link  text-dark" href="#">Nosotros</a>
-            <a class="nav-item nav-link  text-dark" href="#">Servicio</a>
-            <a class="nav-item nav-link  text-dark" href="#">Instalaciones</a>
-            <a class="nav-item nav-link  text-dark" href="#">Contacto</a>
+            <a class="nav-item nav-link  text-dark" [routerLink]="['/nosotros']">Nosotros</a>
+            <a class="nav-item nav-link  text-dark" [routerLink]="['/servicio']">Servicio</a>
+            <a class="nav-item nav-link  text-dark" [routerLink]="['/instalaciones']">Instalaciones</a>
+            <a class="nav-item nav-link  text-dark" [routerLink]="['/contacto']">Contacto</a>
         </div>
         </div>
         </nav>
