--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,60 @@
-<p>footer works!</p>
+
+<div class="d-flex justify-content-center">
+  <nav class="navbar navbar-fixed navbar-light navbar-expand-sm navbar-template">
+    <div class="d-flex flex-row order-2 order-sm-3">
+      <ul class="navbar-nav flex-row">
+        <li class="nav-item"><a class="nav-link px-2 " href="https://www.facebook.com/inocisalosmochis/" target="_blank"><i class="fa fa-facebook fa-3x"></i></a></li>
+        <li class="nav-item"><a class="nav-link px-2 " href="https://wa.me/5216681030694" target="_blank"><i class="fa fa-twitter fa-3x"></i></a></li>
+        <li class="nav-item"><a class="nav-link px-2 " href="https://twitter.com/JessBenjamnCas1" target="_blank"><i class="fa fa-whatsapp fa-3x"></i></a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+<footer class="page-footer font-small cyan darken-3">
+
+  <div class="container-fluid acomodo d-flex justify-content-around align-items-center p-3  " style="background: rgb(140, 165, 45); height: 300px; font-family: 'Philosopher', sans-serif; ">
+      <div class="row text-center ">
+        <div class="col-12 col-sm-4 " >
+          <p class="titulo">Dirección</p>
+          <p class="subtitulo">Hidalgo #74 Ejido México frente a la cancha deportiva</p>
+        </div>
+
+        <div class="col-12 col-sm-4" >
+          <p class="titulo">Teléfono</p>
+          <p class="subtitulo">6688130384</p>
+        </div>
+
+        <div class="col-12 col-sm-4" >
+          <p class="titulo">Email</p>
+          <p class="subtitulo">RecepcionInocisa@hotmail.com </p>
+        </div>
+
+        
+
+
+</div>
+
+
+
+
+
+
+</div>
+    
+
+  
+  </footer>
+
+
+
+
+  
+<!-- 
+  class="col-4 subtitulo d-flex   align-items-center py-3 text-white px-2"  style="font-family: 'Philosopher', sans-serif; " -->
+
+ <!--  <p class="font-weight-bolder ">Dirección</p>
+  <p class="text-center  ">Hiplgo #73 Ejido México Los Mochis Ahome Sinaloa Méxcard>
+  <p class=" font-weight-bolder ">Teléfono</p>
+  <p class=" ">6681030694</p>
+  <p class="font-weight-bolder ">Correo Electrónico</p>
+  <p class=" ">RecepcionInocisa@hotmail.com</p> -->
