--- a/src/app/instalaciones/instalaciones.component.html
+++ b/src/app/instalaciones/instalaciones.component.html
@@ -1,2 +1,61 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
+<!-- <a href="../assets/Imagenes/11.jpg"></a> -->
+<div class="azulinocisa d-flex justify-content-center font-weight-bold text-uppercase align-items-center">
+    <h4 class="font-weight-bold text-center"> Instalaciones</h4>
+   </div>
+<div class="container" id="galeria">
+    
+
+    <div class="row ">
+        <div class="col-lg-4 ">
+             <a href="../assets/Imagenes/Instalaciones.jfif" target="_blank"><img class="galeria6" [src]="fotoprueba"></a>
+        </div>
+        <div class="col-lg-4">
+           <a href="../assets/Imagenes/11.jpg" target="_blank"><img [src]="galeria11"></a> 
+        </div>
+        <div class="col-lg-4">
+            <a href="../assets/Imagenes/13.jpg" target="_blank"><img [src]="galeria13"></a> 
+        </div>
+
+        <div class="col-lg-4">
+            <a href="../assets/Imagenes/18.jpg" target="_blank"><img [src]="galeria18"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/25.jpg" target="_blank"><img [src]="galeria25"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/34.jpg" target="_blank"><img [src]="galeria34"></a> 
+        </div>
+
+        <div class="col-lg-4">
+
+            <a href="../assets/Imagenes/41.jpg" target="_blank"><img [src]="galeria41"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/43.jpg" target="_blank"><img [src]="galeria43"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/44.jpg" target="_blank"><img [src]="galeria44"></a> 
+        </div>
+
+        <div class="col-lg-4">
+
+            <a href="../assets/Imagenes/46.jpg" target="_blank"><img [src]="galeria46"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/47.jpg" target="_blank"><img [src]="galeria47"></a> 
+        </div>
+        <div class="col-lg-4">
+            
+            <a href="../assets/Imagenes/48.jpg" target="_blank"><img [src]="galeria48"></a> 
+        </div>
+        
+    </div>
+</div>
+<app-footer></app-footer>
