--- a/src/app/nosotros/nosotros.component.html
+++ b/src/app/nosotros/nosotros.component.html
@@ -1,2 +1,43 @@
 <app-header></app-header>
+<div class="azulinocisa d-flex justify-content-center font-weight-bold text-uppercase align-items-center">
+    <h4 class="font-weight-bold">Nosotros</h4>
+   </div>
+   <section class="container mt-2 pt-5 pb-5 ">
+
+    <div class="card-deck  ">
+        <div class="card  text-secondary text-center ">
+
+
+            <div class="card-body p-0  ">
+
+                <img [src]="seccionnosotros" class="card-img-bottom img-fluid  shadow shadow-lg" alt="..."
+                    style="width: 450px;">
+
+
+            </div>
+        </div>
+    </div>
+</section>
+<div class="container">
+    <div class="text-left overflow-hidden fixed-left subtitulo pt-3 pb-3 m-3" style="font-family: 'Philosopher', sans-serif;">
+    <p class="font-weight-bold">¿Quienes somos?</p>
+    <p>Somos una  asociación civil  cuyo propósito  principal se enfoca en desarrollar un Programa de Servicios Integrales  de Salud</p>
+    <p class="font-weight-bold">Mision</p>    
+    
+    <p>El Instituto del Noroeste en Ciencias  de la Salud es una  asociación civil  enfocada al  desarrollo de actividades  de  salud  que  incluyen  la  formación de recursos  humanos, la  investigación y la prestación de servicios. Con su quehacer, INOCISA se propone concretar un compromiso  fundamental con la  sociedad , formando profesionales capaces de generar y aplicar conocimientos  de vanguardia para la  atención de la  salud de sus habitantes, promoviendo además la cultura del bienestar de la población.</p>
+    <p class="font-weight-bold">Vision</p>
+    
+    
+    <p>INOCISA es una institución social altamente competitiva y pertinente en su quehacer, reconocida por  brindar servicios  de calidad innovadores y de la más alta calidad que incluyen la formación y desarrollo de recursos humanos con conocimientos  de vanguardia. Sea administra con transparencia en el manejo de sus  recursos, actuando con responsabilidad ética en la generación y difusión de conocimiento en el  área  de las ciencias  de la  salud </p>
+    <p class="font-weight-bold">Valores</p>
+    <ul>
+        <li>1)	Proveer  servicios  de salud enfocados principalmente aunque no de manera  exclusiva  a la población de adultos mayores</li>
+        <li>2)	Formar  recursos humanos para los  equipos  multidisciplinarios  que atienden a adultos mayores </li>
+        <li>3)	Orientar  a la población en general en torno a los impactos  de los  procesos de envejecimiento de la población</li>
+        <li>4)	Asesorar a personas, grupos e instituciones en torno a la problemática  de los adultos mayores, sus impactos y alternativas</li>
+    </ul>
+    
+</div>
+</div>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
