--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,6 +4,9 @@ $naranjainocisa:rgb(248,175,0);
 $verdeinocisa:rgb(165,173,30);
 $verdefinocisa:rgb(131,140,40);
 $grisinocisa: rgb(198,198,198);
+$titulo:4vh;
+$subtitulo:3vh;
+$card:2vh;
 
 
 
@@ -40,4 +43,44 @@ background-size: cover;
 background: $azulincoisa;
 font-family: 'Muli', sans-serif;
 height: 4em;
+}
+
+.opacidad
+{
+    opacity: 90%;
+
+}
+
+.navbar-toggler-icon
+{
+color: black;
+
+}
+ .elementosmenu
+ {
+    a:hover
+    {
+        
+        font-weight: bolder;
+       }
+
+       font-size: $subtitulo;
+ }
+  
+
+ .subtitulo
+{
+font-size: 3vh;
+}
+
+.titulo
+{
+font-size: 4vh;
+}
+
+.letrascard
+{
+
+font-size: 2vh;
+
 }
